--- a/faqs.html
+++ b/faqs.html
@@ -55,7 +55,7 @@
                             <label for="hrader-sub-title">Calculator <i class="fas fa-angle-down"></i></label>
                             <ul>
                                 <li><a href="affordabilityCalculator.html">Affordability Calculator</a></li>
-                                <li><a href="#">Monthly Payment Calculator</a></li>
+                                <li><a href="monthlyPaymentCalculator.html">Monthly Payment Calculator</a></li>
                                 <li><a href="#">Rent VS Buy Calculator</a></li>
                                 <li><a href="#">Loan Comparison Calculator</a></li>
                                 <li><a href="#">Extra Payment Calculator</a></li>
