--- a/monthlyPaymentCalculator.html
+++ b/monthlyPaymentCalculator.html
@@ -56,7 +56,7 @@
                             <ul>
                                 <li><a href="affordabilityCalculator.html">Affordability Calculator</a></li>
                                 <li><a href="monthlyPaymentCalculator.html">Monthly Payment Calculator</a></li>
-                                <li><a href="#">Rent VS Buy Calculator</a></li>
+                                <li><a href="monthlyPaymentCalculator.html">Rent VS Buy Calculator</a></li>
                                 <li><a href="#">Loan Comparison Calculator</a></li>
                                 <li><a href="#">Extra Payment Calculator</a></li>
                             </ul>
