--- a/monthlyPaymentCalculator.html
+++ b/monthlyPaymentCalculator.html
@@ -93,11 +93,11 @@
         <h1 class="calculator-title">Monthly Payment Calculator</h1>
         <div class="calculator-form">
             <form>
-                <label for="loanAmount" class="calculator-label">Loan Amount:</label><br>
+                <label for="loanAmount" class="calculator-label">Loan Amount ($):</label><br>
                 <input type="number" id="loanAmount" name="loanAmount" class="calculator-input"><br><br>
-                <label for="loanTerm" class="calculator-label">Loan Term (in years):</label><br>
+                <label for="loanTerm" class="calculator-label">Loan Term (Years):</label><br>
                 <input type="number" id="loanTerm" name="loanTerm" class="calculator-input"><br><br>
-                <label for="interestRate" class="calculator-label">Interest Rate:</label><br>
+                <label for="interestRate" class="calculator-label">Interest Rate (%):</label><br>
                 <input type="number" step="0.01" id="interestRate" name="interestRate" class="calculator-input"><br><br>
                 <div class="calculator-form-btn">
                     <button type="reset" class="calculator-form-btn-reset">Reset</button>
