--- a/abc.html
+++ b/abc.html
@@ -1,77 +1,53 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Affordability Calculator</title>
-</head>
+  <title>Loan Calculator</title>
+  <script>
+    function calculate() {
+      // Get input values
+      var saleValue = parseFloat(document.getElementById('saleValue').value);
+      var downPayment = parseFloat(document.getElementById('downPayment').value);
+      var isPercentage = document.getElementById('isPercentage').checked;
 
-<body>
-    <h1>Affordability Calculator</h1>
-    <form>
-        <label for="annualIncome">Annual Gross Income:</label>
-        <input type="number" id="annualIncome" name="annualIncome"><br><br>
-        <label for="maxDTI">Maximum DTI Allowed:</label>
-        <input type="number" step="0.01" id="maxDTI" name="maxDTI"><br><br>
-        <label for="monthlyDebtPayment">Monthly Debt Payment:</label>
-        <input type="number" id="monthlyDebtPayment" name="monthlyDebtPayment"><br><br>
-        <label for="downPayment">Down Payment:</label>
-        <input type="number" id="downPayment" name="downPayment">
-        <select id="downPaymentType" name="downPaymentType">
-            <option value="percent">%</option>
-            <option value="dollar">$</option>
-        </select><br><br>
-        <label for="loanTerm">Loan Term (in years):</label>
-        <input type="number" id="loanTerm" name="loanTerm"><br><br>
-        <label for="interestRate">Interest Rate:</label>
-        <input type="number" step="0.01" id="interestRate" name="interestRate"><br><br>
-        <label for="tax">Tax:</label>
-        <input type="number" id="tax" name="tax"><br><br>
-        <label for="insurance">Insurance:</label>
-        <input type="number" id="insurance" name="insurance"><br><br>
-        <label for="hoa">HOA:</label>
-        <input type="number" id="hoa" name="hoa"><br><br>
-        <label for="other">Other:</label>
-        <input type="number" id="other" name="other"><br><br>
-        <button type="button" onclick="calculateAffordability()">Calculate Affordability</button>
-    </form>
-    <p id="maxHomeValue"></p>
-    <p id="principalAndInterest"></p>
-    <p id="totalHousingPayment"></p>
-</body>
+      // Convert down payment to amount if percentage is selected
+      if (isPercentage) {
+        downPayment = saleValue * (downPayment / 100);
+      }
 
-</html>
-<script>
-    function calculateAffordability() {
-        var annualIncome = document.getElementById("annualIncome").value;
-        var maxDTI = document.getElementById("maxDTI").value;
-        var monthlyDebtPayment = document.getElementById("monthlyDebtPayment").value;
-        var downPayment = document.getElementById("downPayment").value;
-        var downPaymentType = document.getElementById("downPaymentType").value;
-        var loanTerm = document.getElementById("loanTerm").value;
-        var interestRate = document.getElementById("interestRate").value;
-        var tax = document.getElementById("tax").value;
-        var insurance = document.getElementById("insurance").value;
-        var hoa = document.getElementById("hoa").value;
-        var other = document.getElementById("other").value;
+      // Calculate base loan, others, ltv, ltvPercentage, and loanCompensation
+      var baseLoan = saleValue - downPayment;
+      var others = baseLoan * 1.75;
+      var ltv = baseLoan + others;
+      var ltvPercentage = (baseLoan / saleValue) * 100;
+      var loanCompensation = ltv * 0.025;
 
-        var downPaymentAmount = 0;
-        if (downPaymentType === "percent") {
-            downPaymentAmount = downPayment / 100 * (annualIncome / 12);
-        } else if (downPaymentType === "dollar") {
-            downPaymentAmount = downPayment
-        }
-
-        // calculate maximum housing payment based on DTI
-        var maxHousingPayment = annualIncome / 12 * maxDTI - monthlyDebtPayment;
-
-        // calculate maximum home value based on down payment and loan term
-        var principal = (maxHousingPayment - tax - insurance - hoa - other) / (1 + (interestRate / 1200)) / (1 - Math.pow((1 + (interestRate / 1200)), -loanTerm * 12));
-        var maxHomeValue = principal + downPaymentAmount;
-
-        // display results
-        document.getElementById("maxHomeValue").innerHTML = "Maximum Home Value: $" + maxHomeValue;
-        document.getElementById("principalAndInterest").innerHTML = "Principal & Interest: $" + principal;
-        document.getElementById("totalHousingPayment").innerHTML = "Total Housing Payment: $" + (maxHousingPayment + tax + insurance + hoa + other);
+      // Display the results
+      document.getElementById('baseLoanResult').textContent = baseLoan.toFixed(2);
+      document.getElementById('othersResult').textContent = others.toFixed(2);
+      document.getElementById('ltvResult').textContent = ltv.toFixed(2);
+      document.getElementById('ltvPercentageResult').textContent = ltvPercentage.toFixed(2) + '%';
+      document.getElementById('loanCompensationResult').textContent = loanCompensation.toFixed(2);
     }
-</script>
+  </script>
+</head>
+<body>
+  <h1>Loan Calculator</h1>
+  
+  <label for="saleValue">Sale Value ($):</label>
+  <input type="number" id="saleValue" required><br>
+  
+  <label for="downPayment">Down Payment ($ or %):</label>
+  <input type="number" id="downPayment" required>
+  <input type="checkbox" id="isPercentage">
+  <label for="isPercentage">Press If Percentage (%)</label><br>
+  
+  <button onclick="calculate()">Calculate</button><br><br>
+  
+  <h2>Results</h2>
+  <p>Base Loan: $<span id="baseLoanResult"></span></p>
+  <p>Others: $<span id="othersResult"></span></p>
+  <p>LTV: $<span id="ltvResult"></span></p>
+  <p>LTV Percentage: <span id="ltvPercentageResult"></span>%</p>
+  <p>Loan Compensation: $<span id="loanCompensationResult"></span></p>
+</body>
+</html>
